compiled proto file
